experiement_output/error_log/nondex-micronaut-projects-micronaut-gradle-plugin:micronaut-crac-plugin.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task648/wd/NonDex-plugin-test/github.com/micronaut-projects/micronaut-gradle-plugin/docker-plugin/src/main/java/io/micronaut/gradle/docker/MicronautDockerfile.java:186: error: ')' expected
        if (task instanceof DockerBuildOptions dbo) {
                                              ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task648/wd/NonDex-plugin-test/github.com/micronaut-projects/micronaut-gradle-plugin/docker-plugin/src/main/java/io/micronaut/gradle/docker/MicronautDockerfile.java:186: error: not a statement
        if (task instanceof DockerBuildOptions dbo) {
                                               ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task648/wd/NonDex-plugin-test/github.com/micronaut-projects/micronaut-gradle-plugin/docker-plugin/src/main/java/io/micronaut/gradle/docker/MicronautDockerfile.java:186: error: ';' expected
        if (task instanceof DockerBuildOptions dbo) {
                                                  ^
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':micronaut-docker-plugin:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.

* Get more help at https://help.gradle.org

BUILD FAILED in 1s
